additions on model

--- a/wound_classification_Model/wound_classification_final.ipynb
+++ b/wound_classification_Model/wound_classification_final.ipynb
@@ -1816,6 +1816,62 @@
    "metadata": {},
    "source": [
     "\n",
+    "##  Deployment Options\n",
+    "\n",
+    "Here are example implementations for different deployment options:\n",
+    "\n",
+    "### 1. Web API (FastAPI)\n",
+    "```python\n",
+    "from fastapi import FastAPI, File, UploadFile\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "\n",
+    "app = FastAPI()\n",
+    "classifier = WoundClassifierInference('improved_wound_classifier.pth')\n",
+    "\n",
+    "@app.post(\"/predict\")\n",
+    "async def predict(file: UploadFile = File(...)):\n",
+    "    image = Image.open(io.BytesIO(await file.read()))\n",
+    "    result = classifier.predict(image)\n",
+    "    return result\n",
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 2. Web Interface (React)\n",
+    "```javascript\n",
+    "function WoundClassifier() {\n",
+    "  const [image, setImage] = useState(null);\n",
+    "  const [prediction, setPrediction] = useState(null);\n",
+    "\n",
+    "  const handleSubmit = async (e) => {\n",
+    "    e.preventDefault();\n",
+    "    const formData = new FormData();\n",
+    "    formData.append('file', image);\n",
+    "\n",
+    "    const response = await fetch('API_ENDPOINT', {\n",
+    "      method: 'POST',\n",
+    "      body: formData,\n",
+    "    });\n",
+    "    const result = await response.json();\n",
+    "    setPrediction(result);\n",
+    "  };\n",
+    "\n",
+    "  return (\n",
+    "    <div>\n",
+    "      <input type=\"file\" onChange={(e) => setImage(e.target.files[0])} />\n",
+    "      <button onClick={handleSubmit}>Classify Wound</button>\n",
+    "      {prediction && (\n",
+    "        <div>\n",
+    "          <h3>Result:</h3>\n",
+    "          <p>Class: {prediction.class_name}</p>\n",
+    "          <p>Confidence: {(prediction.confidence * 100).toFixed(2)}%</p>\n",
+    "        </div>\n",
+    "      )}\n",
+    "    </div>\n",
+    "  );\n",
+    "}\n",
+    "```\n",
     "\n",
     "\n",
     " A mockup for potential deployment:\n",
